--- a/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
+++ b/src/app/modules/recipeManagement/add-recipe/add-recipe.component.html
@@ -1,13 +1,8 @@
-<div class="container  mt-3">
+<!-- <div class="container  mt-3">
     <div class="row">
         <div class="col-lg-12">
             <h3 class="text-primary mt-3 fw-bold text-xl"> {{Title}}</h3>
         </div>
-        <!-- <div class="col-lg-6 text-right">
-            <button  mat-button (click)="onClose(false)">
-                <mat-icon class="mx-0">clear</mat-icon>
-            </button>
-        </div> -->
     </div>
 </div>
 
@@ -17,15 +12,6 @@
             [formGroup]="recipeForm">
 
         <div class="row px-1 ">
-            <!-- <div class="col-lg-3 grid align-items-center text-center  justify-items-center">
-                <div *ngIf="avatarURL" class="position-relative ">
-                    <img class="mx-auto border-4  border-b-gray-800 rounded-circle" [src]="avatarURL"  >
-                    <button style="top: 23px;right: 26px;" class="position-absolute text-primary bg-white rounded shadow" mat-button (click)="removeImg()"><mat-icon >cancel</mat-icon>
-                     </button>
-                </div>
-                <input #file type="file" accept='image/*' [hidden]="true" (change)="onFileChange($event)" formControlName="profile_picture"/>
-                <button mat-raised-button color="primary" material-icons (mousedown)="file.click();" *ngIf="!avatarURL"><mat-icon class="text-white me-3">image</mat-icon>Upload Image</button>
-            </div> -->
             <div class="col-lg-8">
                 <div class="row mb-3">
 
@@ -40,22 +26,7 @@
                             <mat-error>Recipe Name is Required</mat-error>
                         </mat-form-field>
                     </div>
-
-                    <!-- <div class="col-lg-6">
-                        <mat-form-field class="w-100">
-                            <mat-label>Email</mat-label>
-                            <input
-                                    matInput
-                                    placeholder="Enter Email"
-                                    [formControlName]="'email'"
-                                    required>
-                            <mat-error>Email is Required</mat-error>
-                        </mat-form-field>
-
-                    </div> -->
                 </div>
-
-
                 <div class="row  mb-3">
                     <div class="col-lg-12">
                         <mat-form-field class="w-100">
@@ -95,7 +66,6 @@
                                 class="">
                             <b>Ingredient:</b>
                         </div>
-                        <!--                                        (click)="addProductDetails()"-->
                         <button
                                 class="ml-12 rounded bg-green-500 w-32"
                                 style=" color: black !important;"
@@ -120,12 +90,6 @@
 
                     <div class="row mb-3">
                         <div class="col-lg-12">
-                            <!--                        <button-->
-                            <!--                            class="ml-2  "-->
-                            <!--                            style=" color: white !important;"-->
-                            <!--                            >-->
-
-                            <!--                        </button>-->
                             <div class="flex justify-between">
                                 <h3 class="font-bold text-primary">
                                     {{ empIndex + 1 }}
@@ -235,9 +199,270 @@
     <button mat-raised-button class="mr-3 text-white bg-secondary" (click)="onSubmit()">
         Submit
     </button>
-    <!-- <button  mat-raised-button color="primary" (click)="onClose(false)">
-        Cancel
-    </button> -->
 
 </div>
-</div>
+</div> -->
+
+
+<!-- new code  -->
+
+<div class="main-content mx-4">
+    <div class="container-fluid">  
+        <div class="row" >
+            <div class="col-lg-7 px-4 pt-4 pb-3  bg-white shadow rounded" style="height: 80vh;
+      overflow: auto;">
+  
+                <div class="row"  [formGroup]="recipeForm">
+  
+                    <div class="col-lg-6">
+                        <mat-form-field class="w-100 " appearance="outline">
+                            <mat-label>Enter Recipe Name</mat-label>
+                            <input matInput placeholder="Enter Name"
+                            [formControlName]="'recipe_name'"
+                            required>
+                        </mat-form-field>
+                        <mat-form-field class="example-full-width w-100" appearance="outline">
+                            <mat-label>Enter Recipe Description</mat-label>
+                            <textarea matInput placeholder="Enter description"
+                            [formControlName]="'recipe_description'"
+                            required></textarea>
+                        </mat-form-field>
+                    </div>
+  
+                    <!-- <div class="col-lg-6">
+                        <img src="assets/img/ecipe.avif" class="w-100 image-responsive" />
+                        
+  
+                        <button class="w-100 btn btn-primary">
+                            <i class="fa fa-upload mr-2"></i>
+                            Upload Picture
+                        </button>
+
+
+                    </div> -->
+                    <div class="col-lg-6">
+                        <div *ngIf="avatarURL" class="position-relative ">
+                            <img class="mx-auto border-4  border-b-gray-800 rounded-circle" [src]="avatarURL"  >
+                            <button style="top: 23px;right: 26px;" class="position-absolute text-primary bg-white rounded shadow" mat-button (click)="removeImg()"><mat-icon >cancel</mat-icon>
+                             </button> 
+                        </div>
+                        <input #file type="file" accept='image/*' [hidden]="true" (change)="onFileChange($event)" />
+                        <button mat-raised-button color="primary" material-icons (mousedown)="file.click();" *ngIf="!avatarURL"><mat-icon class="text-white me-3">image</mat-icon>Upload Image</button>
+                    </div>
+  
+                </div>
+                <div class="row mt-3">
+                    <div class="col-lg-12 text-center">
+                        <button mat-fab class="btn-primary" type="button" (click)="addIngrediants()" aria-label="Example icon button with a delete icon">
+                            <mat-icon>add</mat-icon>
+                        </button>
+                    </div>
+                </div>
+                
+        <div [formGroup]="recipeForm">
+                <div formArrayName="ingrediants">
+                <div *ngFor="let employee of ingrediants().controls; let empIndex = index" class="row shadow rounded px-4 pt-4 mt-4" 
+                  style="background:#c7c7c730;"  >
+                    <div class="col-lg-12" [formGroupName]="empIndex">
+                        <!-- <mat-icon mat-icon-button (click)="removeIngrediants(empIndex)"
+                        class="text-red-600 text-4xl" style="height: auto; width: auto;">cancel
+              </mat-icon> -->
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <mat-form-field class="w-100 " appearance="outline" >
+                                    <mat-label>Enter Ingredient Name</mat-label>
+                                    <input matInput  maxlength="500"
+                                    [formControlName]="'ingrediant_name'">
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4">
+                                <mat-form-field class="w-100" appearance="outline" >
+                                    <mat-label>Select Type</mat-label>
+                                    <mat-select maxlength="500"
+                                    [formControlName]="'ingrediant_type'"
+                                    placeholder="Type">
+                                        <mat-option value="1">
+                                            Ingredient
+                                          </mat-option>
+                                          <mat-option value="2">
+                                              Spices
+                                          </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4">
+                                <mat-form-field class="w-100 " appearance="outline"  >
+                                    <mat-label>Enter Quantity</mat-label>
+                                    <input matInput maxlength="500"
+                                    [formControlName]="'ingrediant_quantity'"
+                                    placeholder="Quantity">
+                                </mat-form-field>
+                            </div>
+                        </div>
+  
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <mat-form-field class="w-100 " appearance="outline" >
+                                    <mat-label>Enter Cooking Temperature</mat-label>
+                                    <input matInput  maxlength="500"
+                                    [formControlName]="'ingrediant_temperature'"
+                                    placeholder="Temperature">
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4">
+                                <mat-form-field class="w-100 " appearance="outline">
+                                    <mat-label> Cooking Speed</mat-label>
+                                    <mat-select matInput
+                                                maxlength="500"
+                                                [formControlName]="'ingrediant_steering_type'"
+                                                placeholder="Cooking Speed">
+                                        <mat-option value="1">
+                                            Low
+                                        </mat-option>
+                                        <mat-option value="2">
+                                            Medium
+                                        </mat-option>
+                                        <mat-option value="3">
+                                            High
+                                        </mat-option>
+    
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-lg-4">
+                                <mat-form-field class="w-100 " appearance="outline">
+                                    <mat-label>Enter Cooking Time</mat-label>
+                                    <input matInput  maxlength="500"
+                                    [formControlName]="'ingrediant_cooking_time'"
+                                    placeholder="Cooking Time">
+                                </mat-form-field>
+                            </div>
+                        </div>
+                    </div>
+  
+  
+                </div>
+  
+            </div>
+  </div>
+            </div>
+  
+            <div class="col-lg-5">
+  
+                    <div class="d-flex">
+                        <div class="glass-effect  card-icon" style="width: 140px; height:75px;">B1</div>
+                        <div class="glass-effect  card-icon" style="width: 180px; height:75px;">B2</div>
+                        <div class="glass-effect  card-icon" style="width: 140px; height:75px;">B3</div>
+                    </div>
+  
+                    <div class="d-flex  ">
+                        <div class="glass-effect card-icon" style="width: 140px; height:200px;">B4</div>
+                        <div class="glass-effect" style="width: 180px; height:200px;">
+  
+                            <div class="d-flex" style="flex-wrap: wrap; justify-content: center;">
+                                <div class="glass-effect bg-secondary" style="width: 45px; height:45px;  ">B1</div>
+                                <div class="glass-effect  bg-primary" style="width: 45px; height:45px;  ">B2</div>
+                                <div class="glass-effect  bg-secondary" style="width: 45px; height:45px;  ">B3</div>
+                                <div class="glass-effect bg-secondary" style="width: 45px; height:45px;  ">B1</div>
+                                <div class="glass-effect  bg-primary" style="width: 45px; height:45px;  ">B2</div>
+                                <div class="glass-effect  bg-secondary" style="width: 45px; height:45px;  ">B3</div>
+                                <div class="glass-effect bg-secondary" style="width: 45px; height:45px;  ">B1</div>
+                                <div class="glass-effect  bg-secondary" style="width: 45px; height:45px;  ">B2</div>
+                                <div class="glass-effect  bg-secondary" style="width: 45px; height:45px;  ">B3</div>
+                            </div>
+  
+  
+                        </div>
+                        <div class="glass-effect card-icon" style="width: 140px; height:200px;">B5</div>
+                    </div>
+  
+                    <div class="d-flex">
+                        <div class="glass-effect card-icon" style="width: 140px; height:75px;">B6</div>
+                        <div class="glass-effect card-icon" style="width: 180px; height:75px;">B7</div>
+                        <div class="glass-effect card-icon" style="width: 140px; height:75px;">B8</div>
+                    </div>
+  
+  
+            </div>
+  
+  
+        </div>
+        </div>
+        </div>
+  
+  
+  
+  
+   <!-- new code end -->
+  
+  
+  
+  <!-- <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="text-2xl font-bold">Recipe List</div>
+  
+      </div>
+    </div>
+    <div class="row mb-3 mt-3">
+      <div class="col-lg-12 text-end place-self-end">
+        <button color="primary" [routerLink]="['/recipeManagement/add-recipe']"  mat-raised-button>
+          <mat-icon>add</mat-icon>
+          Add Recipe
+        </button>
+      </div>
+    </div>
+  
+  
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort class="mat-table">
+        <ng-container matColumnDef="recipe_id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell *matCellDef="let row">
+            <span class="font-bold text-primary ms-2">{{row.recipe_id}}</span>
+          </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="recipe_name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Recipe Name </th>
+          <td mat-cell *matCellDef="let row"> {{row.recipe_name}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="recipe_description">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+          <td mat-cell *matCellDef="let row"> {{row.recipe_description}} </td>
+        </ng-container>
+  
+        
+  
+  
+  
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+          <td mat-cell *matCellDef="let row">
+  
+            <mat-icon class="me-2 pointer position-relative" color="primary" style="z-index: 99999"
+               [routerLink]="['/recipeManagement/add-recipe/',row.recipe_id]" matTooltipPosition="above" matTooltipClass="custom-tooltip"
+              matTooltip="click to edit">edit</mat-icon>
+  
+  
+            <mat-icon class="pointer position-relative" (click)="onDelete(row.recipe_id)" style="z-index: 99999" color="warn"
+              matTooltipPosition="above" matTooltipClass="custom-tooltip" matTooltip="click to delete">delete</mat-icon>
+  
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="cook">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Cook </th>
+          <td mat-cell *matCellDef="let row">   <button mat-raised-button class="mr-3 bg-secondary">
+            Cook Now!
+        </button> </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [length]="length" (page)="handlePageEvent($event)" showFirstLastButtons></mat-paginator>
+  
+    </div>
+  </div> -->
+  
