--- a/src/app/modules/recipeManagement/recipe-list/recipe.component.html
+++ b/src/app/modules/recipeManagement/recipe-list/recipe.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="row">
+<div class="mt-5 px-5">
+    <div class="row pt-5 mt-5">
       <div class="col-lg-6">
         <div class="text-2xl font-bold">Recipe List</div>
   
