--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer ">
+<!-- <footer class="footer ">
     <div class="container-fluid">
         <nav class="pull-left">
             <ul>
@@ -10,4 +10,4 @@
             </ul>
         </nav>
     </div>
-</footer>
+</footer> -->
